; ModuleID = '/home/carl/AnghaBench/postgres/src/backend/nodes/extr_outfuncs.c__outSetOp.c'
source_filename = "/home/carl/AnghaBench/postgres/src/backend/nodes/extr_outfuncs.c__outSetOp.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_3__ = type { i32 }

@.str = private unnamed_addr constant [6 x i8] c"SETOP\00", align 1
@cmd = common dso_local global i32 0, align 4
@SetOpCmd = common dso_local global i32 0, align 4
@strategy = common dso_local global i32 0, align 4
@SetOpStrategy = common dso_local global i32 0, align 4
@numCols = common dso_local global i32 0, align 4
@dupColIdx = common dso_local global i32 0, align 4
@dupOperators = common dso_local global i32 0, align 4
@dupCollations = common dso_local global i32 0, align 4
@flagColIdx = common dso_local global i32 0, align 4
@firstFlag = common dso_local global i32 0, align 4
@numGroups = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32, %struct.TYPE_3__*)* @_outSetOp to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @_outSetOp(i32 %0, %struct.TYPE_3__* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca %struct.TYPE_3__*, align 8
  store i32 %0, i32* %3, align 4
  store %struct.TYPE_3__* %1, %struct.TYPE_3__** %4, align 8
  %5 = call i32 @WRITE_NODE_TYPE(i8* getelementptr inbounds ([6 x i8], [6 x i8]* @.str, i64 0, i64 0))
  %6 = load i32, i32* %3, align 4
  %7 = load %struct.TYPE_3__*, %struct.TYPE_3__** %4, align 8
  %8 = bitcast %struct.TYPE_3__* %7 to i32*
  %9 = call i32 @_outPlanInfo(i32 %6, i32* %8)
  %10 = load i32, i32* @cmd, align 4
  %11 = load i32, i32* @SetOpCmd, align 4
  %12 = call i32 @WRITE_ENUM_FIELD(i32 %10, i32 %11)
  %13 = load i32, i32* @strategy, align 4
  %14 = load i32, i32* @SetOpStrategy, align 4
  %15 = call i32 @WRITE_ENUM_FIELD(i32 %13, i32 %14)
  %16 = load i32, i32* @numCols, align 4
  %17 = call i32 @WRITE_INT_FIELD(i32 %16)
  %18 = load i32, i32* @dupColIdx, align 4
  %19 = load %struct.TYPE_3__*, %struct.TYPE_3__** %4, align 8
  %20 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %19, i32 0, i32 0
  %21 = load i32, i32* %20, align 4
  %22 = call i32 @WRITE_ATTRNUMBER_ARRAY(i32 %18, i32 %21)
  %23 = load i32, i32* @dupOperators, align 4
  %24 = load %struct.TYPE_3__*, %struct.TYPE_3__** %4, align 8
  %25 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %24, i32 0, i32 0
  %26 = load i32, i32* %25, align 4
  %27 = call i32 @WRITE_OID_ARRAY(i32 %23, i32 %26)
  %28 = load i32, i32* @dupCollations, align 4
  %29 = load %struct.TYPE_3__*, %struct.TYPE_3__** %4, align 8
  %30 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %29, i32 0, i32 0
  %31 = load i32, i32* %30, align 4
  %32 = call i32 @WRITE_OID_ARRAY(i32 %28, i32 %31)
  %33 = load i32, i32* @flagColIdx, align 4
  %34 = call i32 @WRITE_INT_FIELD(i32 %33)
  %35 = load i32, i32* @firstFlag, align 4
  %36 = call i32 @WRITE_INT_FIELD(i32 %35)
  %37 = load i32, i32* @numGroups, align 4
  %38 = call i32 @WRITE_LONG_FIELD(i32 %37)
  ret void
}

declare dso_local i32 @WRITE_NODE_TYPE(i8*) #1

declare dso_local i32 @_outPlanInfo(i32, i32*) #1

declare dso_local i32 @WRITE_ENUM_FIELD(i32, i32) #1

declare dso_local i32 @WRITE_INT_FIELD(i32) #1

declare dso_local i32 @WRITE_ATTRNUMBER_ARRAY(i32, i32) #1

declare dso_local i32 @WRITE_OID_ARRAY(i32, i32) #1

declare dso_local i32 @WRITE_LONG_FIELD(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
